--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
-html,body,h1,h2,h3,h4,h5,h6 {
-	font-family: "Roboto", sans-serif
+body {font-family: "Times New Roman", Georgia, Serif;}
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Playfair Display";
+  letter-spacing: 5px;
 }
